I changed again json package

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cse341node",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "nodemon app.js",
     "start": "node app.js"
