--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "homepage": "https://github.com/rachelvargas/cse341Node#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
-
