--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parse": "^0.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "heroku": "^7.67.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3"
   },
