--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/rachelvargas/cse341Node.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Rachel Vargas",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rachelvargas/cse341Node/issues"
@@ -22,11 +21,8 @@
     "body-parse": "^0.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "heroku": "^7.67.1",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.8.3"
-  },
-  "devDependencies": {
+    "mongoose": "^6.8.3",
     "nodemon": "^2.0.20"
   }
 }
